Fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,7 @@ a {
 	height:110%;
 	background-color:black;
 	z-index: 110;
+	overflow: hidden;
 }
 #LoadingContainer{
 	display: table-cell;
@@ -350,6 +351,7 @@ a {
 	background: -o-radial-gradient(#CFCFCF 0%, rgba(30,30,30,.5) 90%); /* For Opera 11.6 to 12.0 */
 	background: -moz-radial-gradient(#CFCFCF 0%, rgba(30,30,30,.5) 90%); /* For Firefox 3.6 to 15 */
 	background: radial-gradient(#CFCFCF 0%, rgba(30,30,30,.5) 90%); /* Standard syntax */
+	overflow: auto;
 }
 input {
 	text-align: center;
